feat: add access key operator query
