# spring-boot2/src/main/resources/openapi.yaml
@@ -17,7 +17,7 @@ info:
     <pre><code class="language-bash">curl -X GET "http://localhost:8070/openapi/v1/apps" \
     -H "Authorization: your_token_here"</code></pre>
   title: Apollo OpenAPI
-  version: 0.3.2
+  version: 0.3.3
 servers:
 - url: /
 security:
@@ -5714,6 +5714,14 @@ paths:
           default: 0
           type: integer
         style: form
+      - description: ""
+        explode: true
+        in: query
+        name: operator
+        required: false
+        schema:
+          type: string
+        style: form
       responses:
         "200":
           description: ""
@@ -5754,6 +5762,14 @@ paths:
           format: int64
           type: integer
         style: simple
+      - description: ""
+        explode: true
+        in: query
+        name: operator
+        required: false
+        schema:
+          type: string
+        style: form
       responses:
         "200":
           description: ""
